@@ -18,7 +18,7 @@ schemars = "0.8.10"
 serde_json = "1.0"
 syn = { version = "1.0", features = ["full"] }
 thiserror = "1.0"
-unicode-xid = "0.2"
+unicode-ident = "1.0.0"
 
 [dev-dependencies]
 expectorate = "1.0"
