@@ -15,6 +15,8 @@
 
 https://github.com/oxidecomputer/typify/compare/v0.0.8\...HEAD[Full list of commits]
 
+* Switched from `unicode-xid` to `unicode-ident` (#60)
+
 == 0.0.8 (released 2022-05-22)
 
 https://github.com/oxidecomputer/typify/compare/v0.0.7\...v0.0.8[Full list of commits]
